<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".calendar.info.Info">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/menuHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_background"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/information"
            android:textColor="@color/color_white"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="10dp"
            tools:layout_editor_absoluteY="10dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menuHeader"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="-16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/Info_textDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="34dp"
                android:fontFamily="@font/allerta"
                android:text="@string/date_xx_xx_xxxx"
                android:textColor="@color/color_black"
                android:textSize="25sp"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteY="10dp" />


            <TextView
                android:id="@+id/Info_typeVaccine"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Info_textDate"
                android:textSize="20sp"
                android:text="ประเภทวัคซีน : "

                />




            <TextView
                android:id="@+id/Info_placeVaccine"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="24dp"
                android:text="สถานที่รับวัคซีน : "
                app:counterEnabled="true"
                app:counterMaxLength="70"
                app:helperText="Required"
                app:helperTextTextColor="@color/color_orangeRed"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Info_typeVaccine"
                android:textSize="20sp"/>


            <TextView
                android:id="@+id/Info_price"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="250dp"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                android:text="ราคา : บาท"
                app:helperTextTextColor="@color/color_orangeRed"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Info_placeVaccine"
                android:textSize="20sp"/>

            <CheckBox
                android:id="@+id/Info_remindMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_remind_me"
                android:layout_marginTop="25dp"
                android:layout_marginStart="20dp"
                android:button="@drawable/image_checkbox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/Info_price"
                app:layout_constraintTop_toBottomOf="@+id/Info_placeVaccine"
                android:fontFamily="@font/allerta"
                android:textSize="15sp"
                android:textStyle="normal"
                android:clickable="false"
                />

            <TextView
                android:id="@+id/Info_note"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="24dp"
                android:text="บันทึกเพิ่มเติม"
                app:helperTextTextColor="@color/color_orangeRed"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Info_price"
                android:textSize="20sp"
                />
            <TextView
                android:id="@+id/Info_noteText"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="24dp"
                android:text="@string/information_note"
                app:helperTextTextColor="@color/color_orangeRed"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Info_note"
                android:textSize="15sp"
                />





            <Button
                android:id="@+id/Info_EditButton"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_marginTop="100dp"
                android:fontFamily="@font/allerta"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp"
                android:text="@string/edit"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="@id/Info_BackButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Info_noteText"

                />

            <Button
                android:id="@+id/Info_BackButton"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_marginTop="100dp"
                android:fontFamily="@font/allerta"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp"
                android:text="@string/back"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/Info_EditButton"
                app:layout_constraintTop_toBottomOf="@+id/Info_noteText" />

            <Button
                android:textColor="@color/color_orangeRed"
                android:id="@+id/Info_Delete"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/allerta"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp"
                android:text="Delete"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/Info_EditButton"
                app:layout_constraintStart_toStartOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>